fix column in filter on mobile screen

--- a/app/sass/media.sass
+++ b/app/sass/media.sass
@@ -92,7 +92,6 @@
 				li
 					display: inline-block
 					vertical-align: top
-					// width: 33.33%
 					width: 33.3%
 					font-size: 16px
 					line-height: 64px
@@ -268,10 +267,9 @@
 					display: block
 				& [type="submit"]
 					position: absolute
-
-	.header .filter-wrapper .filter li
-		width: 50%
 	.main-content
+		.filter-wrapper .filter li
+			width: 50%
 		.button
 			padding: 10px 20px
 			max-width: 200px
